syntax = "proto3";

package hello;

option go_package = "github.com/ecoma-io/go-observability/examples/grpc-service/proto";

// HelloService provides greeting operations
service HelloService {
  // Unary RPC: Get a greeting
  rpc SayHello(HelloRequest) returns (HelloResponse);
  
  // Server streaming RPC: Get multiple greetings
  rpc SayHelloStream(HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
  int32 request_count = 2;
}
